--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,8 @@
 [flake8]
 max-line-length=90
-extend-ignore=D401
+extend-ignore=
+    D401
 per-file-ignores=
     ./django_gvar/__init__.py: F401
+exclude=
+    ./tests/field_tests/migrations
