--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,16 +22,20 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }} @ ${{ matrix.os }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[dev]
+        pip install -e .[dev]
+
     - name: Run tests
       run: pytest --cov=django_gvar/ --cov-report=xml tests/
+
     - name: Upload tests to Codecov
       uses: codecov/codecov-action@v1
       with:
