Added deployment scripts to makefile

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,5 @@ per-file-ignores=
     ./django_gvar/__init__.py: F401
 exclude=
     ./tests/field_tests/migrations
-    _version.py
+    ./django_gvar/_version.py
+    ./build/
